# Pycodes

./: README.md  example_04.py  lesson78.py  pyproject.toml  requirements.txt
example_pathfile/: lesson116.txt  lesson119.json
intermediary_python/: explanationlistcomp.py  lesson100.py  lesson101.py  lesson102.py  lesson104.py  lesson105.py  lesson106.py  lesson107.py  lesson108.py  lesson109.py  lesson110.py  lesson111.py  lesson112.py  lesson113.py  lesson114.py  lesson115.py  lesson116.py  lesson117.py  lesson118.py  lesson119.py  lesson65.py  lesson66.py  lesson67.py  lesson68.py  lesson69.py  lesson70.py  lesson71.py  lesson72.py  lesson73.py  lesson74.py  lesson75.py  lesson76.py  lesson77.py  lesson78.py  lesson79.py  lesson80.py  lesson81.py  lesson82.py  lesson83.py  lesson84.py  (+20 more)
intermediary_python/lesson119_package/: __init__.py  module.py
intermediary_python/lesson99_package/: __init__.py  module.py  module_b.py
intermediary_python/products_data/: __init__.py  module.py
modules_python/: app.py  lesson162.py  lesson163.py  lesson164.py  lesson165.py  lesson166.py  lesson167.py  lesson168.py  lesson169.py  lesson170.py  lesson171.py  lesson172.py  lesson173.py  lesson174.py  lesson175.py  module_example.py  path_lib_example.py
poo_python/: lesson120.py  lesson121.py  lesson122.py  lesson123.py  lesson124.py  lesson125.py  lesson126.py  lesson127.json  lesson127_a.py  lesson127_b.py  lesson128.py  lesson129.py  lesson130.py  lesson131.py  lesson132.py  lesson133.py  lesson134.py  lesson135.py  lesson136.py  lesson137.py  lesson138.py  lesson139.py  lesson140.py  lesson142.py  lesson144.py  lesson146.py  lesson147.py  lesson147_1.py  lesson148.py  lesson149.py  lesson150.py  lesson151.py  lesson152.py  lesson153.py  lesson154.py  lesson155.py  lesson157.py  lesson159.py  lesson160.py  lesson161.py
poo_python/lesson141/: eletronic.py  log.py  log.txt  main.py  main01.py
poo_python/lesson156/: main.py
poo_python/lesson158/: accounts.py  bank.py  client.py  main.py  my_error.py  person.py
python_basics/: lesson1.py  lesson10.py  lesson11.py  lesson12.py  lesson13.py  lesson14.py  lesson15.py  lesson16.py  lesson17.py  lesson18.py  lesson19.py  lesson2.py  lesson20.py  lesson21.py  lesson22.py  lesson23.py  lesson24.py  lesson25.py  lesson26.py  lesson27.py  lesson28.py  lesson29.py  lesson3.py  lesson30.py  lesson31.py  lesson32.py  lesson33.py  lesson34.py  lesson35.py  lesson36.py  lesson37.py  lesson38.py  lesson39.py  lesson4.py  lesson40.py  lesson41.py  lesson42.py  lesson43.py  lesson44.py  lesson45.py  (+26 more)
type_hints/: example.py  example01.py  example28.py  example_02.py  example_03.py  example_05.py  example_06.py  example_07.py  example_08.py  example_09.py  example_10.py  example_11.py  example_12.py  example_13.py  example_14.py  example_15.py  example_16.py  example_17.py  example_18.py  example_19.py  example_20.py  example_21.py  example_22.py  example_23.py  example_24.py  example_25.py  example_26.py  example_27.py  example_29.py  example_30.py  example_31.py  example_32.py  example_33.py  example_34.py  example_35.py  example_36.py  example_37.json  example_37.py  example_38.py  example_39.py  (+7 more)
